# compscience-3rd-sem

./: .gitignore
task-01-mish/: CMakeLists.txt  README.md  temp
task-01-mish/common/: commands.h  error.h  full_duplex_pipe.h  list.h  memutil.h
task-01-mish/include/: command.hpp  driver.hpp  scanner.hpp
task-01-mish/src/: builtin_commands.cc  builtin_commands.hpp  driver.hpp  file_wrapper.hpp  icommand.hpp  main.cc  mish.c  mish.cc  parser.y  scanner.l
task-02-pipe/: CMakeLists.txt  README.md
task-02-pipe/src/: main.c
task-03-ipc/: CMakeLists.txt
task-03-ipc/src/: pipe_benchmark.cc
task-04-multithreading/: CMakeLists.txt  README.md
task-04-multithreading/results/: 1024threads_average8.txt  32threads.txt  verbose_32threads.txt
task-04-multithreading/src/: integral.cc
task-05-shmem/: CMakeLists.txt  README.md
task-05-shmem/src/: shmemsig.cc
task-07-copy-server/: CMakeLists.txt  README.md
task-07-copy-server/include/: command.hpp  driver.hpp  request.hpp  utils.hpp
task-07-copy-server/include/command_parser/: scanner.hpp
task-07-copy-server/include/req_parser/: driver.hpp  scanner.hpp
task-07-copy-server/src/: client.cc  copyserver.cc  parser.y  scanner.l  server.cc  shared_queue.hpp
task-07-copy-server/src/ctl_parser/: parser.y  scanner.l
task-07-copy-server/src/req_parser/: parser.y  scanner.l
